# Torres-de-hanoi

./: CMakeLists.txt  README.md  main.cpp
clases/: Condiciones.h  Disco.h  Nodo.h  Pila.h  PintarTorre.h
codigo-fuente/: Condicion.cpp  Pila.cpp  PintarTorre.cpp
